@@ -1,3 +1,9 @@
+2022-07-17  Charlie Zender  <zender@uci.edu>
+
+	* NCO 5.1.1-alpha04 release procedure:
+	cd ~/nco;git commit -a -m 'Version 5.1.1-alpha04: Curtis';git push
+	git tag -a 5.1.1-alpha04 -m 'nco_fl_chmod, ncatted, ncrename with NCZarr';git push --tags
+
 2022-07-15  Charlie Zender  <zender@uci.edu>
 
 	* NCO 5.1.1-alpha03 release procedure:
